--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.1.0",
     "express": "^4.18.2",
     "material-icons": "^1.13.12",
+    "ngh": "^0.2.12",
     "primeng": "^17.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
